css/grayscale.css
/*!
 * Start Bootstrap - Grayscale v5.0.9 (https://startbootstrap.com/template-overviews/grayscale)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
 */

@media (max-width: 1024px) {
    
.pill-table-wrap {
    width: 800px !important;
    padding: 15px;
        }    
}

@media (max-width: 768px) {
    
.pill-table-wrap {
    width: 600px !important;
        }    
}

@media (max-width: 425px) {
    
.pill-table-wrap {
    width: 375px !important;
        }    
}

@media (max-width: 325px) {
    h1 {
        font-size: 1.5rem;
    }
}

@media (max-width: 320px) {
    
.pill-table-wrap {
    width: 300px !important;
        }    
}


#mainNav {
  min-height: 56px;
  background-color: #fff;
  font-family: 'Nunito';
}

#mainNav .navbar-toggler {
  font-size: 80%;
  padding: 0.75rem;
  color: #64a19d;
  border: 1px solid #64a19d;
}

#mainNav .navbar-toggler:focus {
  outline: none;
}

#mainNav .navbar-brand {
  color: rgb(128, 128, 128); 
  font-weight: 700;
  padding: .9rem 0;
}

#mainNav .navbar-nav .nav-item:hover {
  color: fade(white, 80%);
  outline: none;
  background-color: transparent;
}

#mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
  outline: none;
  background-color: transparent;
}

.logo {
  width: 80%;
  height: 60%;
}
.dnc_logo {
  margin-left: 25%;
}

.dnc_logo2 {
  margin-left: 15%;
}
@media (min-width: 992px) {
  #mainNav {
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: none;
    background-color: transparent;
    transition: background-color 0.3s ease-in-out;
  }
  #mainNav .navbar-brand {
    padding: .5rem 0;
    color: rgb(255, 255, 255);
  }
  #mainNav .nav-link {
    transition: none;
    padding: 2rem 1.5rem;
    color: white;
  }
  #mainNav .nav-link:hover {
    color: rgba(255, 255, 255, 0.75);
  }
  #mainNav .nav-link:active {
    color: black;
  }
  #mainNav.navbar-shrink {
    background-color: white;
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: black;
  }
  #mainNav.navbar-shrink .nav-link {
    color: black;
    padding: 1.5rem 1.5rem 1.25rem;
    border-bottom: 0.25rem solid transparent;
  }
  #mainNav.navbar-shrink .nav-link:hover {
    color: #808080;
  }
  #mainNav.navbar-shrink .nav-link:active {
    color: gray;
  }
  #mainNav.navbar-shrink .nav-link.active {
    color: lightslategray;
    outline: none;
    border-bottom: 0.25rem solid #64a19d;
  }
}

.masthead {
  position: relative;
  width: 100%;
  height: auto;
  min-height: 35rem;
  padding: 15rem 0;
  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 50%, #161616 100%), url("../img/ILF.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.masthead2 {
  position: relative;
  width: 100%;
  height: 50px;
  margin-bottom: 5%;
  padding: 15rem 0;
  background: linear-gradient(to bottom, rgba(255, 254, 254, 0.144) 0%, rgba(240, 133, 45, 0.623) 25%),url("../img/ILFhero2.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.masthead h1 {
  font-family: 'Cooper Hewitt';
  font-size: 1.5rem;
  line-height: 2.5rem;
  letter-spacing: 0.8rem;
  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
  -webkit-text-fill-color: white;
  -webkit-background-clip: text;
}

.masthead h2 {
  max-width: 20rem;
  font-size: 2rem;
  margin-bottom: 20px;
  margin-top:20px;
}

.parallax1 {
  background-image: url("../img/ILF.jpg");
  height: 800px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.parallax2 {
  background-image: url("../img/ilf.jpg");
  height: 100%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding: inherit;
}

.child-header {
    background: linear-gradient(90deg, rgba(129,0,214,1) 35%, rgba(86,0,143,1) 100%);
    height:200px;
    padding-top:110px;
    margin-bottom:20px;"
}


.tabs-left {
  border-bottom: none;
  border-right: 1px solid #ddd;
}

.tabs-left>li {
  float: none;
 margin:0px;
  
}

.tabs-left>li.active>a,
.tabs-left>li.active>a:hover,
.tabs-left>li.active>a:focus {
  border-bottom-color: #ddd;
  border-right-color: transparent;
  background:#f90;
  border:none;
  border-radius:0px;
  margin:0px;
}
.nav-tabs>li>a:hover {
    /* margin-right: 2px; */
    line-height: 1.42857143;
    border: 1px solid transparent;
    /* border-radius: 4px 4px 0 0; */
}
.tabs-left>li.active>a::after{content: "";
    position: absolute;
    top: 10px;
    right: -10px;
    border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  
  border-left: 10px solid #f90;
    display: block;
    width: 0;}

  #sponsor {
      padding: 5%;
   }
   
@media (min-width: 640px) {
  .masthead h1 {
    font-size: 4rem;
    line-height: 4rem;
    text-align: center;
  }
  .parallax1 {
    background-image: url("../img/ILF.jpg");
    height: 800px;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }
}

@media (min-width: 992px) {
  .masthead {
    height: 100vh;
    padding: 0;
  }
  .masthead h1 {
    font-size: 6rem;
    line-height: 6.5rem;
    letter-spacing: 0.8rem;
    text-align: center;
  }
  .masthead h2 {
    max-width: 30rem;
    font-size: 3rem;
    text-align: inherit;
    margin-top: 30px;
    margin-bottom: 30px;  
  }
}

.list {
    list-style: none;
    padding-right: 5px;
}

@media only screen and (max-device-width: 1366px) {
  .parallax {
    background-attachment: scroll;
  }
}

.venue-header

.contrib-nav {
    margin-bottom: 30px;
}



.agenda-box {
    height: 250px;
    overflow: scroll;
}

@media only screen and (max-device-width: 425px) {
    .agenda-box {
    height: 390px;
    }
    
    .agenda-nav {
    margin: 15px auto;
}
    
    
    .contrib-nav .nav-link {
    width: 250px;    
    }    
}

.btn {
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1.25rem 2rem;
  font-family: 'Varela Round';
  font-size: 80%;
  text-transform: uppercase;
  letter-spacing: .15rem;
  border: 0;
}

.btn-primary {
  background-color: #124d89;
}

.btn-primary:hover {
  background-color: #81a9cd;
}

.btn-primary:focus {
  background-color: #003869;
  color: grey;
}

.btn-primary:active {
  background-color: #467370 !important;
}

.about-section {
  padding-top: 10rem;
  background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
}
.about-section p {
  margin-bottom: 5rem;
}

.projects-section {
  padding: 5rem 0;
}

.projects-section .featured-text {
  padding: 2rem;
}

.venue-header {
    margin-bottom:100px;
}

@media (min-width: 992px) {
  .projects-section .featured-text {
    padding: 0 0 0 2rem;
    border-left: 0.5rem solid #e7732a;
  }
}

.projects-section .project-text {
  padding: 4rem;
  font-size: 90%;
}

@media (min-width: 992px) {
  .projects-section .project-text {
    padding: 5rem;
  }
  .projects-section .project-text hr {
    border-color: #64a19d;
    border-width: .25rem;
    width: 30%;
  }
}

#about-page {
    text-align: left !important;
}

.signup-section {
  padding: 10rem 0;
  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%);
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.signup-section .form-inline input {
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
  padding: 1.25rem 2rem;
  height: auto;
  font-family: 'Varela Round';
  font-size: 80%;
  text-transform: uppercase;
  letter-spacing: 0.15rem;
  border: 0;
}

.contact-section {
  padding: 5rem 0 0;
}

.contact-section .card {
  border: 0;
  border-bottom: 0.25rem solid #64a19d;
}

.contact-section .card h4 {
  font-size: 0.8rem;
  font-family: 'Nunito';
  text-transform: uppercase;
  letter-spacing: 0.15rem;
}

.contact-section .card hr {
  border-color: #64a19d;
  border-width: 0.25rem;
  width: 3rem;
}

.contact-section .social {
  margin-top: 5rem;
}

.contact-section .social a {
  text-align: center;
  height: 3rem;
  width: 3rem;
  background: rgba(255, 255, 255, 0.1);
  border-radius: 100%;
  line-height: 3rem;
  color: rgba(255, 255, 255, 0.3);
}

.contact-section .social a:hover {
  color: rgba(255, 255, 255, 0.5);
}

.contact-section .social a:active {
  color: #fff;
}

body {
  font-family: 'Varela round';
  letter-spacing: 0.0625em;
}

a {
  color: #64a19d;
}

a:focus, a:hover {
  text-decoration: none;
  color: #3c6360;
}

.parallax3 {
  background-image: url('../img/fiserv_location.jpg');
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  margin-top: 200px;
  
}

.bg-primary {
  background-color: #64a19d !important;
}

.text-primary {
  color: #64a19d !important;
}


footer {
  padding: 5rem 0;
  margin-top: 5%;

.ft {
  color: black;
}
.active-page {
    border-radius: 0 0 4px 4px;
}
    

